--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@ PORT = 4000
 
 
 # DB Info
-DB_HOST = '127.0.0.1'
+DB_HOST = '103.87.175.182'
 DB_PORT = '5432'
-DB_USER = 'postgres'
-DB_PASS = 'admin'
-DB_NAME = 'turf_wala'
+DB_USER = 'oneroof'
+DB_PASS = 'Oneroof@123'
+DB_NAME = 'turfwala_uat'
 
 # JWT
 SECRET = "turfwala"
