--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/SagarJ95/turfwala#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
@@ -28,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.2",
     "pg": "^8.11.5",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "sharp": "^0.33.1"
   }
 }
