--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/SagarJ95/turfwala#readme",
   "dependencies": {
+    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
