--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "moment": "^2.30.1",
@@ -36,10 +37,11 @@
     "nodemon": "^3.1.2",
     "pg": "^8.11.5",
     "pg-format": "^1.0.4",
+    "react-owl-carousel": "^2.3.3",
     "sharp": "^0.33.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.2",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.2"
   }
 }
