--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-moment": "^1.1.3",
+    "react-owl-carousel": "^2.3.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
